Freetype: fix calculation of max advance

Some fonts like Sakkal Majalla have a large max_advance_width, apparently due to some glyphs that are rarely if ever used. This was causing "Invalid max width" errors for text that did fit the available width.

So the calculation of max advance has been modified to take into account only the glyphs we are actually rendering.

Fixes #20102

Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>
(cherry picked from commit c47d0c4df2d3735cdf4bb4abc812a2c6befdb523)
Signed-off-by: Jean-Baptiste Kempf <jb@videolan.org>